--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,1 +1,8 @@
-
+main {
+	width: 100%;
+	display: flex;
+	flex-direction: center;
+	justify-content: center;
+	align-items: center;
+	padding: 36px 24px;
+}
