--- a/src/styles/_conf.scss
+++ b/src/styles/_conf.scss
@@ -1,5 +1,4 @@
 /* Colors */
-$color-dark: #000000;
 $color-light: #ffffff;
 $color-purple: #7f56d9;
 $color-text: #667085;
@@ -25,6 +24,11 @@ $color-bg-pink: #fdf2fa;
 $color-bg-darkpink: #fff1f3;
 $color-bg-orange: #fff6ed;
 $color-bg-green: #ecfdf3;
+
+/* Fonts */
+$font-regular: 400;
+$font-medium: 500;
+$font-semibold: 600;
 
 /* Breakpoints */
 
