--- a/src/styles/_conf.scss
+++ b/src/styles/_conf.scss
@@ -31,6 +31,31 @@ $font-medium: 500;
 $font-semibold: 600;
 
 /* Breakpoints */
+@mixin for-phone-only {
+	@media (max-width: 599px) {
+		@content;
+	}
+}
+@mixin for-tablet-portrait-down {
+	@media (max-width: 700px) {
+		@content;
+	}
+}
+@mixin for-tablet-landscape-up {
+	@media (min-width: 900px) {
+		@content;
+	}
+}
+@mixin for-desktop-down {
+	@media (max-width: 1200px) {
+		@content;
+	}
+}
+@mixin for-big-desktop-up {
+	@media (min-width: 1800px) {
+		@content;
+	}
+}
 
 /* Mixins */
 @mixin label-purple {
