--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,7 +1,7 @@
 main {
 	width: 100%;
 	display: flex;
-	flex-direction: center;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	padding: 3rem 24px;
