--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 // Components
 @import "../components/Header/style.scss";
+@import "../components/Label/style.scss";
 
 // Pages
 @import "../pages/Home/style.scss";
