--- a/src/components/Label/style.scss
+++ b/src/components/Label/style.scss
@@ -11,12 +11,9 @@
   saas
   podcasts
   customer success
-
 */
 
 .labels {
-	border: 1px solid green;
-	background-color: #000;
 	width: 100%;
 	padding: 12px 0;
 	display: flex;
@@ -26,7 +23,10 @@
 	gap: 1rem;
 
 	span {
-		padding: 12px;
+		padding: 5px;
+		border-radius: 16px;
+		font-size: small;
+		font-weight: $font-medium;
 		text-transform: capitalize;
 	}
 
