--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,8 +1,17 @@
 main {
 	width: 100%;
+	padding: 3rem 24px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 3rem 24px;
+	gap: 2rem;
+}
+
+article {
+	border: 1px solid black;
+	min-width: 90%;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
