--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 // Components
 @import "../components/Header/style.scss";
 @import "../components/Label/style.scss";
+@import "../components/Post/style.scss";
 
 // Pages
 @import "../pages/Home/style.scss";
