--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -9,9 +9,26 @@ main {
 }
 
 article {
-	border: 1px solid black;
-	min-width: 90%;
+	width: 90%;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+
+	h2 {
+		color: $color-title;
+		font-weight: $font-semibold;
+		font-size: min(1.5rem, 5vw);
+	}
+}
+
+section.recent-posts {
+	width: 100%;
+	gap: 1rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+
+section.recent-posts .post1 {
+	grid-row-start: 1;
+	grid-row-end: 3;
 }
