--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -14,6 +14,10 @@ article {
 	flex-direction: column;
 	gap: 1rem;
 
+	@include for-phone-only {
+		width: 100%;
+	}
+
 	h2 {
 		color: $color-title;
 		font-weight: $font-semibold;
@@ -26,6 +30,11 @@ section.recent-posts {
 	gap: 1rem;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
+
+	@include for-desktop-down {
+		display: flex;
+		flex-direction: column;
+	}
 }
 
 section.recent-posts .post1 {
