section 'all-blog-posts' responsive | OK

--- a/src/components/Label/style.scss
+++ b/src/components/Label/style.scss
@@ -18,12 +18,13 @@
 	padding: 12px 0;
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: center;
 	gap: 1rem;
 
 	span {
-		padding: 8px;
+		padding: 5px;
 		border-radius: 16px;
 		font-size: small;
 		font-weight: $font-medium;
